Using numeric input

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>Histórico de la lotería de Navidad</h1>
 
     <div id="main">
-        <input type="number" pattern=".{10}" id="numberToSearch"/>
+        <input inputmode="numeric" pattern=".{10}" id="numberToSearch"/>
         <br />
         <button type="text" onclick="search()" id="btnSearch">Buscar</button>
         <br />
