--- a/index.html
+++ b/index.html
@@ -10,16 +10,23 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <h1>Histórico de la lotería de Navidad</h1>
-
     <div id="main">
-        <input inputmode="numeric" pattern=".{10}"  maxlength="5" id="numberToSearch"/>
-        <br />
-        <button type="text" onclick="search()" id="btnSearch">Buscar</button>
-        <br />
+        <h1>Histórico de la lotería de Navidad</h1>
+        <h3>Comprueba si tus números de lotería fueron premiados en años anteriores</h3>
+        <div class="divInteractable">
+            <input inputmode="numeric" pattern=".{10}"  maxlength="5" id="numberToSearch" class="interactable"/>
+        </div>
+        
+        <button type="text" onclick="search()" id="btnSearch" class="interactable">Buscar</button>
+
         <span id="errorMessage" class="hide">Por favor inserte un número válido</span>
         <br />
-        <div id="results"></div>
+        <div id="results">
+            <ul>
+                <li>2020 - 1000€</li>
+                <li>2019 - 1000€</li>
+            </ul>
+        </div>
     </div>
 
 </body>
