--- a/index.html
+++ b/index.html
@@ -42,5 +42,15 @@
 
     </div>
 
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-4Q4RPPHQ48"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-4Q4RPPHQ48');
+    </script>
 </body>
 </html>
