--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 <body>
     <div id="main">
         <header>
-            <h1>Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores</h1>
+            <h1>Histórico Lotería Navidad</h1>
         </header>
-
+        
         <main>
+            <h3>Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores</h3>
             <div class="divSearch">
                 <label>Número:
                     <input inputmode="numeric" pattern=".{10}"  maxlength="5" id="numberToSearch"/>
