--- a/index.html
+++ b/index.html
@@ -56,12 +56,7 @@
         </div>
         <br />
         <div id="divResults">
-          <div id="results">
-            <ul>
-              <li>2020 - 1000€</li>
-              <li>2019 - 1000€</li>
-            </ul>
-          </div>
+          <div id="results" class="hide"></div>
         </div>
       </main>
     </div>
