--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Histórico Lotería Navidad</title>
+
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -8,7 +10,46 @@
       name="description"
       content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
     />
+
+    <!-- HTML Meta Tags -->
     <title>Histórico Lotería Navidad</title>
+    <meta
+      name="description"
+      content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://xatpy.github.io/historico-loteria-Navidad/"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Histórico Lotería Navidad" />
+    <meta
+      property="og:description"
+      content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
+    />
+    <meta
+      property="og:image"
+      content="https://github.com/Xatpy/historico-loteria-Navidad/blob/main/images/historicoPreview.png?raw=true"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="xatpy.github.io" />
+    <meta
+      property="twitter:url"
+      content="https://xatpy.github.io/historico-loteria-Navidad/"
+    />
+    <meta name="twitter:title" content="Histórico Lotería Navidad" />
+    <meta
+      name="twitter:description"
+      content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
+    />
+    <meta
+      name="twitter:image"
+      content="https://github.com/Xatpy/historico-loteria-Navidad/blob/main/images/historicoPreview.png?raw=true"
+    />
 
     <link
       rel="icon"
