--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
       rel="stylesheet"
     />
 
-    <script src="./main.js"></script>
-    <link rel="stylesheet" href="./styles.css" />
+    <script src="./main.min.js"></script>
+    <link rel="stylesheet" href="./styles.min.css" />
   </head>
   <body>
     <div id="main">
