--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
       content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
     />
 
-    <!-- HTML Meta Tags -->
     <title>Histórico Lotería Navidad</title>
     <meta
       name="description"
       content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
     />
 
-    <!-- Facebook Meta Tags -->
     <meta
       property="og:url"
       content="https://xatpy.github.io/historico-loteria-Navidad/"
@@ -33,8 +31,6 @@
       property="og:image"
       content="https://github.com/Xatpy/historico-loteria-Navidad/blob/main/images/historicoPreview.png?raw=true"
     />
-
-    <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="xatpy.github.io" />
     <meta
@@ -62,13 +58,13 @@
       rel="stylesheet"
     />
 
-    <script src="./main.min.js"></script>
-    <link rel="stylesheet" href="./styles.min.css" />
+    <script src="./main.js"></script>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <div id="main">
       <header>
-        <h1>Histórico Lotería Navidad</h1>
+        <h1>Histórico Lotería Navidad 🌐🎄</h1>
       </header>
 
       <main>
@@ -100,7 +96,7 @@
             >Por favor inserte un número válido.</span
           >
         </div>
-        <br />
+
         <div id="divResults">
           <div id="results" class="hide"></div>
         </div>
