--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     />
     <meta
       property="og:image"
-      content="https://github.com/Xatpy/historico-loteria-Navidad/blob/main/images/historicoPreview.png?raw=true"
+      content="https://raw.githubusercontent.com/Xatpy/historico-loteria-Navidad/main/images/historicoPreview.png"
     />
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:domain" content="xatpy.github.io" />
@@ -44,7 +44,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://github.com/Xatpy/historico-loteria-Navidad/blob/main/images/historicoPreview.png?raw=true"
+      content="https://raw.githubusercontent.com/Xatpy/historico-loteria-Navidad/main/images/historicoPreview.png"
     />
 
     <link
