--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
+      content="Histórico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
     />
 
     <title>Histórico Lotería Navidad</title>
     <meta
       name="description"
-      content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
+      content="Histórico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
     />
 
     <meta
@@ -25,7 +25,7 @@
     <meta property="og:title" content="Histórico Lotería Navidad" />
     <meta
       property="og:description"
-      content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
+      content="Histórico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
     />
     <meta
       property="og:image"
@@ -40,7 +40,7 @@
     <meta name="twitter:title" content="Histórico Lotería Navidad" />
     <meta
       name="twitter:description"
-      content="Historico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
+      content="Histórico Loteria Navidad. Comprueba si tus números de la Lotería de Navidad fueron premiados en años anteriores"
     />
     <meta
       name="twitter:image"
